Delete and take off air Publication is working! Need to test all functions to see if there are any bugs.

--- a/FoodCollector/Base.lproj/Main.storyboard
+++ b/FoodCollector/Base.lproj/Main.storyboard
@@ -2706,6 +2706,6 @@
         <image name="first-screen-donate" width="44" height="22"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="Y05-aN-O0g"/>
+        <segue reference="A0O-sE-e8c"/>
     </inferredMetricsTieBreakers>
 </document>
