--- a/FoodCollector/Base.lproj/Main.storyboard
+++ b/FoodCollector/Base.lproj/Main.storyboard
@@ -7,7 +7,6 @@
         <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
-        <capability name="Navigation items with more than one left or right bar item" minToolsVersion="7.0"/>
     </dependencies>
     <scenes>
         <!--Publication DetailsTVC-->
@@ -1659,7 +1658,7 @@
                         <color key="backgroundColor" red="0.85490196078431369" green="0.85490196078431369" blue="0.85490196078431369" alpha="1" colorSpace="calibratedRGB"/>
                         <prototypes>
                             <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" id="86w-XP-GEp">
-                                <rect key="frame" x="0.0" y="22" width="600" height="44"/>
+                                <rect key="frame" x="0.0" y="86" width="600" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="86w-XP-GEp" id="4jp-Xk-w9i">
                                     <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
@@ -1912,19 +1911,11 @@
                         </variation>
                     </view>
                     <navigationItem key="navigationItem" title="השיתופים שלי" id="bjZ-lv-Ao0">
-                        <rightBarButtonItems>
-                            <barButtonItem systemItem="add" id="aGi-dR-bYS">
-                                <connections>
-                                    <segue destination="aLT-Mt-UlA" kind="show" identifier="showNewPublicationEditorVC" id="JDB-Nq-jUx"/>
-                                </connections>
-                            </barButtonItem>
-                            <barButtonItem style="done" id="zrW-Cg-F7i">
-                                <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="detailDisclosure" lineBreakMode="middleTruncation" id="ovX-gA-Jli">
-                                    <rect key="frame" x="521.5" y="11" width="22" height="22"/>
-                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                </button>
-                            </barButtonItem>
-                        </rightBarButtonItems>
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="aGi-dR-bYS">
+                            <connections>
+                                <segue destination="wMX-dT-Bep" kind="show" identifier="showNewPublicationEditorTVC" id="NQE-cH-Sd8"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                     <connections>
                         <outlet property="collectionView" destination="F1S-aM-6hz" id="IOL-L9-BQS"/>
@@ -1933,58 +1924,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vPV-wW-e7y" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2026" y="1036"/>
-        </scene>
-        <!--Publication EditorVC-->
-        <scene sceneID="jSj-kr-F2H">
-            <objects>
-                <viewController hidesBottomBarWhenPushed="YES" id="aLT-Mt-UlA" customClass="PublicationEditorVC" customModule="FoodCollector" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="Sqf-a1-Srw"/>
-                        <viewControllerLayoutGuide type="bottom" id="SBQ-gH-AV2"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="pOe-2C-BSJ">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="MFj-mS-lUK">
-                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
-                                <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" id="YxI-J8-hd4">
-                                        <rect key="frame" x="0.0" y="92" width="600" height="44"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="YxI-J8-hd4" id="VJw-HC-epp">
-                                            <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
-                                </prototypes>
-                                <connections>
-                                    <outlet property="dataSource" destination="aLT-Mt-UlA" id="kei-ho-Mqx"/>
-                                    <outlet property="delegate" destination="aLT-Mt-UlA" id="mRA-Zi-iIE"/>
-                                </connections>
-                            </tableView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="clip" translatesAutoresizingMaskIntoConstraints="NO" id="q62-5v-rH0">
-                                <rect key="frame" x="60" y="150" width="50" height="50"/>
-                                <color key="backgroundColor" red="0.0" green="0.50196081400000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                <state key="normal" image="CameraIcon"/>
-                            </button>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstItem="MFj-mS-lUK" firstAttribute="leading" secondItem="pOe-2C-BSJ" secondAttribute="leadingMargin" constant="-20" id="5YU-0t-fhh"/>
-                            <constraint firstItem="MFj-mS-lUK" firstAttribute="top" secondItem="Sqf-a1-Srw" secondAttribute="bottom" id="Vf6-aU-ank"/>
-                            <constraint firstAttribute="bottom" secondItem="MFj-mS-lUK" secondAttribute="bottom" id="cvb-Ke-hei"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="MFj-mS-lUK" secondAttribute="trailing" constant="-20" id="eLp-CB-mGR"/>
-                            <constraint firstItem="MFj-mS-lUK" firstAttribute="centerX" secondItem="pOe-2C-BSJ" secondAttribute="centerX" id="qEI-f6-XNf"/>
-                        </constraints>
-                    </view>
-                    <connections>
-                        <outlet property="publicationTable" destination="MFj-mS-lUK" id="k0L-JC-sPU"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="5cm-3s-3UX" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="2026" y="1821"/>
         </scene>
         <!--מה תרצה לעשות?-->
         <scene sceneID="emO-q2-foM">
@@ -2162,7 +2101,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="bEc-tq-uHy">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bEc-tq-uHy">
                                 <rect key="frame" x="0.0" y="64" width="600" height="44"/>
                                 <subviews>
                                     <searchBar contentMode="redraw" placeholder="הקלידו כתובת או ביחרו חיפוש קודם" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ulr-E7-krT">
@@ -2181,7 +2120,7 @@
                                     <constraint firstAttribute="bottom" secondItem="ulr-E7-krT" secondAttribute="bottom" id="bwL-gR-1rH"/>
                                 </constraints>
                             </view>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="LFz-Xi-WxG">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="LFz-Xi-WxG">
                                 <rect key="frame" x="0.0" y="108" width="600" height="492"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
@@ -2400,7 +2339,6 @@
     </scenes>
     <resources>
         <image name="Avtivity-center" width="27" height="30"/>
-        <image name="CameraIcon" width="30" height="21"/>
         <image name="Collect-off" width="49" height="49"/>
         <image name="Collect_v5" width="35" height="40"/>
         <image name="Donate_v5" width="35" height="40"/>
