Fix: If a user clicks a cell that is not the start or end date cell, and one of the date pickers is open, then it will be closed. Also, fixed an issue when a user clicks a text cell (Subject or Description) to edit and the old (current) text would disappear.

--- a/FoodCollector/PublicationEditorTVCTextFieldCustomCell.xib
+++ b/FoodCollector/PublicationEditorTVCTextFieldCustomCell.xib
@@ -15,7 +15,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" textAlignment="right" clearsOnBeginEditing="YES" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="iq1-6w-I38">
+                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" textAlignment="right" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="iq1-6w-I38">
                         <rect key="frame" x="87" y="7" width="218" height="30"/>
                         <animations/>
                         <fontDescription key="fontDescription" type="system" pointSize="16"/>
